resources/styles/less/base/mediawiki.less
/** *** *** ** *** *** **/
/** MEDIAWIKI IMPORTS  **/
/** *** *** ** *** *** **/

@import "../../../../../../resources/src/mediawiki.skinning/accessibility.less";
@import "../../../../../../resources/src/mediawiki.skinning/content.thumbnails-common.less";
@import "../../../../../../resources/src/mediawiki.skinning/content.links.less";
@import "../../../../../../resources/src/mediawiki.skinning/content.externallinks.less";
@import "../../../../../../resources/src/mediawiki.skinning/content.body.less";
@import "../../../../../../resources/src/mediawiki.skinning/content.tables.less";
@import "../../../../../../resources/src/mediawiki.skinning/i18n-all-lists-margins.less";

/* Mediawiki overwrites: */

/** *** *** ** *** *** **/
/** MEDIAWIKI GENERAL  **/
/** *** *** ** *** *** **/

body {
	min-width: 320px;
}

.cursor-pointer {
	cursor: pointer;
}

.errorbox {
	max-width: 100%;
	border: 2px solid #d33;
}

.gallerytextwrapper {
	width: 100% !important;
	margin: 0 !important;
}

.image img, .fullImageLink a img, .thumb, .thumbinner, .responsive-image, .responsive-video, .noresize {
	max-width: 100% !important;
	height: auto !important;
}

.thumbcaption, .thumb.tright .noresize div a {
	display: none;
}

pre {
    padding-left: 2px;
    padding-right: 2px;
	margin-bottom: 0.5rem;
}
.mw-highlight pre {
	margin-bottom: 0;
}

.d-inline-table {
	display: inline-table !important;
}

code {
    padding-left: 2px;
	padding-right: 2px;
	color: inherit;
	display: grid;
	white-space: pre;
	overflow-x: auto;
	margin-bottom: 0.5rem;
}

.mw-highlight {
	display: grid;
	margin-bottom: 0.5rem;
}

.mw-highlight pre {
	line-height: 125%;
}

.mw-highlight.mw-content-ltr .lineno {
    float: left;
}

.mw-editsection-bracket, editsection {
	display: none;
	margin-bottom: 1rem
}

.mw-editsection, #editpagelink, #editTocLink {
	font-size: 17px;
	vertical-align: middle;
}

.mw-editsection-bracket ~ a, #editpagelink {
	text-decoration: none;
}

#content-inner-wrapper .mw-content-ltr ul, .mw-content-rtl .mw-content-ltr ul {
	margin: 0 0 1rem 2.2rem;
	padding: 0;
}

.thumb.tright .thumbinner,
.floatright {
	margin: 0 0 1rem 1rem;
}

.thumb.tleft .thumbinner,
.floatleft {
	margin: 0 1rem 1rem 0;
}

.thumb.tnone .thumbinner {
	margin: 0 0 1rem 0;
}

.center .thumb.tnone .thumbinner {
	margin: 0 auto;
	margin-bottom: 1rem;
}

.center img {
    display: block;
    margin: 0 auto;
    margin-bottom: 1rem;
}

.mw-content-ltr {
	word-break: break-word;
	hyphens: auto;
}

.mw-content-ltr ol, .mw-content-rtl .mw-content-ltr ol {
    margin: 0.3em 0 0.8em 2.2em;
}

td {
	vertical-align: initial;
}

#content-inner-wrapper .mw-content-ltr li ul, .mw-content-rtl .mw-content-ltr li ul {
	margin: 0 0 0 1.2rem;
}

@media (max-width: 576px) {
	.thumb.tleft .thumbinner,
	.thumb.tright .thumbinner {
		margin: 0 0 1rem 0;
	}
}

.warningbox p {
	margin-bottom: 0;
}

// frame

.framed {
	border: 1px solid lighten( @bluegray, 20%);
}

/* #mw-content-text :last-child > * {
	 margin-bottom: 0 !important;
} */

/** *** *** *** *** *** *** *** *** *** *** **/
/** MEDIAWIKI-UI and OO-UI INPUT CHANGES **/
/** *** *** *** *** *** *** *** *** *** *** **/
.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button,
.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked + span,
.mw-ui-button.mw-ui-progressive {
	color: @mw-ui-highlighted-button-font-color;
	background-color: @mw-ui-highlighted-button-bg;
	border-color: @mw-ui-highlighted-button-bg;
}

.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button:hover,
.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked:hover + span,
.mw-ui-button.mw-ui-progressive:hover {
	background-color: lighten(@mw-ui-highlighted-button-bg, 5%);
	border-color: @mw-ui-highlighted-button-bg;
}

.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button:active:focus,
.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:active + span,
.mw-ui-button.mw-ui-progressive:active {
	background-color: darken(@mw-ui-highlighted-button-bg, 5%);
	border-color: darken(@mw-ui-highlighted-button-bg, 5%);
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked + span {
	color: @mw-ui-highlighted-button-font-color;
	background-color: @mw-ui-highlighted-button-bg;
	border-color: @mw-ui-highlighted-button-bg;
}

.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button:focus,
.mw-ui-button.mw-ui-progressive:focus {
	border-color: @mw-ui-highlighted-button-bg;
	box-shadow: inset 0 0 0 1px @mw-ui-highlighted-button-bg, inset 0 0 0 2px @mw-ui-highlighted-button-font-color;
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:focus + span {
	border-color: @mw-ui-highlighted-button-bg;
	box-shadow: inset 0 0 0 1px @mw-ui-highlighted-button-bg;
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:hover + span {
	border-color: @mw-ui-highlighted-button-bg;
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:active + span {
	background-color: darken(@mw-ui-highlighted-button-bg, 5%);
	border-color: darken(@mw-ui-highlighted-button-bg, 5%);
	box-shadow: inset 0 0 0 1px darken(@mw-ui-highlighted-button-bg, 5%);
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked + span {
	background-color: @mw-ui-highlighted-button-bg;
	border-color: @mw-ui-highlighted-button-bg;
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked:focus + span {
	background-color: @mw-ui-highlighted-button-bg;
	border-color: @mw-ui-highlighted-button-bg;
	box-shadow: inset 0 0 0 1px @mw-ui-highlighted-button-bg, inset 0 0 0 2px @mw-ui-highlighted-button-font-color;
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked:hover + span {
	background-color: lighten(@mw-ui-highlighted-button-bg, 5%);
	border-color: lighten(@mw-ui-highlighted-button-bg, 5%);
}

.oo-ui-checkboxInputWidget.oo-ui-widget-enabled [type='checkbox']:checked:active + span {
	background-color: darken(@mw-ui-highlighted-button-bg, 5%);
	border-color: darken(@mw-ui-highlighted-button-bg, 5%);
	box-shadow: inset 0 0 0 1px darken(@mw-ui-highlighted-button-bg, 5%);
}

.oo-ui-textInputWidget input {
	height: inherit;
}


.ext-WikiEditor-realtimepreview-button span.oo-ui-labelElement-label {
	display:none;
}
.wikiEditor-ui-toolbar .page-characters div span {
	height: auto !important;
}

mjx-container svg {
	max-width: 100%;
}

